# splineRacer

./: .gitignore  README.md
splineRacer/: CMakeLists.txt
splineRacer/TP_Main/: Main.cpp  Makefile  TP_Main_Main  TP_template_SDLtemplate  cmake_install.cmake
splineRacer/TP_splineTest/: frontMenu.cpp  gameObjTest.cpp  ingameMenu.cpp  lightTest.cpp  splineTest.cpp  tinyObjLoaderTest.cpp
splineRacer/TP_splineTest/shaders/: 3D.vs.glsl  directionalLight.fs.glsl  normals.fs.glsl  tex2D.vs.glsl  tex3D.fs.glsl
splineRacer/assets/: scores.json
splineRacer/assets/levels/: Easy.map  Easy.spline  Hard.map  Hard.spline  Normal.map  Normal.spline  level1.json  level1.map
splineRacer/doc/: CMakeLists.txt  Doxyfile.in
splineRacer/glimac/src/: Collider.cpp  FreeflyCamera.cpp  GameObject.cpp  Geometry.cpp  Player.cpp  SDLWindowManager.cpp  TestB.cpp  TrackballCamera.cpp  tiny_obj_loader.cpp
splineRacer/oups_TP_splineTest/: ingameMenu.cpp  lightTest.cpp  splineTest.cpp  tinyObjLoaderTest.cpp
splineRacer/oups_TP_splineTest/shaders/: tex2D.fs.glsl
splineRacer/splineengine/: CMakeLists.txt
splineRacer/splineengine/src/: AssetManager.cpp  BoundingBox.cpp  Camera.cpp  Chaser.cpp  Collectable.cpp  Collider.cpp  CubeMap.cpp  Decoration.cpp  Error.cpp  FreeflyCamera.cpp  Game.cpp  GameManager.cpp  GameObject.cpp  Light.cpp  Menu.cpp  Model.cpp  Obstacle.cpp  POVCamera.cpp  Pause.cpp  Player.cpp  RenderManager.cpp  Settings.cpp  Skybox.cpp  Spline.cpp  TestA.cpp  Text.cpp  TextManager.cpp  TextOld.cpp  Texture.cpp  TrackballCamera.cpp
splineRacer/src/: CMakeLists.txt  main.cpp
(+75 files in other folders)
